# MIC5_final_assignment_Plan_b

./: .gitignore  CMakeLists.txt  README.md  ozone.jdebug
config/: FreeRTOSConfig.h
lib/: .gitignore
src/: board_definitions.hpp  display_helper.h  main.c
